--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,3 +22,12 @@
 body.scrolling .group-hover\:flex {
   display: none !important;
 }
+
+/* Hide scrollbar but allow scroll */
+.hide-scrollbar {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome/Safari/Webkit */
+}
